--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
-    id "com.github.johnrengelman.shadow" version "4.0.0"	
+    id "com.github.johnrengelman.shadow" version "4.0.0"
+    id "com.google.cloud.tools.jib" version "0.9.12"
 }
 
 apply plugin:"application"
@@ -40,4 +41,8 @@ shadowJar {
 
 run.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1')
 
+mainClassName = "micronaut.jib.Application"
+
+/** CHANGE THIS TO THE IMAGE YOU WANT TO PUSH TO */
+// jib.to.image = 'gcr.io/PROJECT_ID/micronaut-jib'
 mainClassName = "micronaut.jib.Application"
